gobmkida/c3/remove_top_move
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3191:12: error: expected expression
*( _OWORD *)&best_moves[1] = *( _OWORD *)&best_moves[2]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3191:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[1] = *( _OWORD *)&best_moves[2]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3191:41: error: expected expression
*( _OWORD *)&best_moves[1] = *( _OWORD *)&best_moves[2]; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3191:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[1] = *( _OWORD *)&best_moves[2]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3192:12: error: expected expression
*( _OWORD *)&best_move_values[1] = *( _OWORD *)&best_move_values[2]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3192:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[1] = *( _OWORD *)&best_move_values[2]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3192:47: error: expected expression
*( _OWORD *)&best_move_values[1] = *( _OWORD *)&best_move_values[2]; 
                                              ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3192:39: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[1] = *( _OWORD *)&best_move_values[2]; 
                                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3193:12: error: expected expression
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3193:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3193:41: error: expected expression
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3193:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3194:12: error: expected expression
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3194:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3194:47: error: expected expression
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
                                              ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3194:39: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
                                      ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3259:12: error: expected expression
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3259:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3259:41: error: expected expression
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
                                        ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3259:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_moves[5] = *( _OWORD *)&best_moves[6]; 
                                ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3260:12: error: expected expression
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3260:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3260:47: error: expected expression
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
                                              ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/engine/value_moves.c:3260:39: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&best_move_values[5] = *( _OWORD *)&best_move_values[6]; 
                                      ^
24 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/remove_top_move/src/obj/1/value_moves.o] Error 1
